# RySP

./: CONTRIBUTING.md  Pipfile  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  instalation.rst
examples/: Circuits I.ipynb  Circuits II.ipynb  circuit.tex  custom_dictionary.py  debugging.py  template_hardware_pulsed.json
examples/_generated_img/: circuit.tex
src/rysp/: __init__.py
src/rysp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rysp/core/: __init__.py
src/rysp/core/circuit/: __init__.py  gatedictionary.py  operations.py  pulses.py  quantumcircuit.py
src/rysp/core/experiment/: __init__.py  atom.py  atomsystem.py  experimentsetup.py
src/rysp/core/physics/: __init__.py  anti_trapping.py  atom_wf_integrals.py  constants.py  rabicalc.py  sr88.py  units.py
src/rysp/core/physics/atom_data/: Sr88_dipole_matrix_elements_energies.csv  Sr88_dipole_matrix_elements_energies_rydberg.csv
src/rysp/core/physics/electron_wf/: ElectronPolFactors.npy  ElectronWaveFuncM.npy  ElectronWaveFuncMNorm.npy  endcoeff.npy
src/rysp/core/simulation/: __init__.py  hamiltonian.py  hamiltonian_expansions.py  losses.py  qterm.py  simulator.py
src/rysp/utils/: compile_qua.py  state_view.py  visualize.py
src/rysp/utils/atomsorting/: route_finding_astar.py  route_finding_astar_assignment.py  route_finding_example.py  routeoptimizerbrowaeys.py
tests/: test_atom.py
